--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.0"
   },
   "devDependencies": {
